Add authenticated user check for book returns and improve loan validations